--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.21.4",
     "classnames": "^2.3.1",
     "google-map-react": "^2.1.10",
+    "html-react-parser": "^1.4.0",
     "material-ui-dropzone": "^3.5.0",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
